Issue 225: Improved CacheStorageConfiguration